vlib/v/checker/tests/assign_expr_undefined_err_g.vv
fn main() {
	mut file := file.open_file('bees.pdf', 'rw', 0o666)
}
